--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
+[submodule "blogs2csv"]
+	path = blogs2csv
+	url = https://github.com/h4zzkR/livejournal_blog2csv.git
+[submodule "blog2csv"]
+	path = blog2csv
+	url = https://github.com/h4zzkR/livejournal_blog2csv.git
 [submodule "blog2csv_scrap"]
 	path = blog2csv_scrap
 	url = https://github.com/h4zzkR/livejournal_blog2csv.git
